// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: #0 format[acorn] 1`] = `
"Classes can't have a field named 'constructor' (2:3)
  1 | class Foo {
> 2 |   constructor
    |   ^
  3 | }
Cause: Classes can't have a field named 'constructor' (2:2)"
`;

exports[`snippet: #0 format[babel] 1`] = `
"Classes may not have a field named 'constructor'. (2:3)
  1 | class Foo {
> 2 |   constructor
    |   ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:2)"
`;

exports[`snippet: #0 format[babel-ts] 1`] = `
"Classes may not have a field named 'constructor'. (2:3)
  1 | class Foo {
> 2 |   constructor
    |   ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:2)"
`;

exports[`snippet: #0 format[espree] 1`] = `
"Classes can't have a field named 'constructor' (2:3)
  1 | class Foo {
> 2 |   constructor
    |   ^
  3 | }
Cause: Classes can't have a field named 'constructor'"
`;

exports[`snippet: #0 format[flow] 1`] = `
"Classes may not have fields named \`constructor\`. (2:3)
  1 | class Foo {
> 2 |   constructor
    |   ^
  3 | }
Cause: Classes may not have fields named \`constructor\`. (2:2)"
`;

exports[`snippet: #0 format[hermes] 1`] = `
"invalid class property name (2:3)
  1 | class Foo {
> 2 |   constructor
    |   ^
  3 | }
Cause: invalid class property name (2:2)
  constructor
  ^~~~~~~~~~~"
`;

exports[`snippet: #0 format[meriyah] 1`] = `
"Classes may not have a field called constructor (3:1)
  1 | class Foo {
  2 |   constructor
> 3 | }
    | ^
Cause: [3:0-3:1]: Classes may not have a field called constructor"
`;

exports[`snippet: #0 format[oxc] 1`] = `
"Expected \`(\` but found \`}\` (3:1)
  1 | class Foo {
  2 |   constructor
> 3 | }
    | ^"
`;

exports[`snippet: #0 format[oxc-ts] 1`] = `
"Expected \`(\` but found \`}\` (3:1)
  1 | class Foo {
  2 |   constructor
> 3 | }
    | ^"
`;

exports[`snippet: #0 format[typescript] 1`] = `
"'(' expected. (3:1)
  1 | class Foo {
  2 |   constructor
> 3 | }
    | ^
Cause: '(' expected."
`;

exports[`snippet: #0 format[yuku] 1`] = `
"Expected '(' for getter/setter definition, but found '}' (3:1)
  1 | class Foo {
  2 |   constructor
> 3 | }
    | ^"
`;

exports[`snippet: #0 format[yuku-ts] 1`] = `
"Expected '(' for getter/setter definition, but found '}' (3:1)
  1 | class Foo {
  2 |   constructor
> 3 | }
    | ^"
`;

exports[`snippet: #1 format[acorn] 1`] = `
"Classes can't have a field named 'constructor' (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^
  3 | }
Cause: Classes can't have a field named 'constructor' (2:2)"
`;

exports[`snippet: #1 format[babel] 1`] = `
"Classes may not have a field named 'constructor'. (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:2)"
`;

exports[`snippet: #1 format[babel-ts] 1`] = `
"Classes may not have a field named 'constructor'. (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:2)"
`;

exports[`snippet: #1 format[espree] 1`] = `
"Classes can't have a field named 'constructor' (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^
  3 | }
Cause: Classes can't have a field named 'constructor'"
`;

exports[`snippet: #1 format[flow] 1`] = `
"Classes may not have fields named \`constructor\`. (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^
  3 | }
Cause: Classes may not have fields named \`constructor\`. (2:2)"
`;

exports[`snippet: #1 format[hermes] 1`] = `
"invalid class property name (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^
  3 | }
Cause: invalid class property name (2:2)
  'constructor'
  ^~~~~~~~~~~~~"
`;

exports[`snippet: #1 format[meriyah] 1`] = `
"Classes may not have a field called constructor (3:1)
  1 | class Foo {
  2 |   'constructor'
> 3 | }
    | ^
Cause: [3:0-3:1]: Classes may not have a field called constructor"
`;

exports[`snippet: #1 format[oxc] 1`] = `
"Classes can't have a field named 'constructor' (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #1 format[oxc-ts] 1`] = `
"Classes can't have a field named 'constructor' (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #1 format[typescript] 1`] = `
"Classes may not have a field named 'constructor'. (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^^^^^^^^^^^^^
  3 | }
Cause: Classes may not have a field named 'constructor'."
`;

exports[`snippet: #1 format[yuku] 1`] = `
"Expected '(' for getter/setter definition, but found '}' (3:1)
  1 | class Foo {
  2 |   'constructor'
> 3 | }
    | ^"
`;

exports[`snippet: #1 format[yuku-ts] 1`] = `
"Expected '(' for getter/setter definition, but found '}' (3:1)
  1 | class Foo {
  2 |   'constructor'
> 3 | }
    | ^"
`;

exports[`snippet: #2 format[acorn] 1`] = `
"Classes can't have a field named 'constructor' (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^
  3 | }
Cause: Classes can't have a field named 'constructor' (2:2)"
`;

exports[`snippet: #2 format[babel] 1`] = `
"Classes may not have a field named 'constructor'. (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:2)"
`;

exports[`snippet: #2 format[babel-ts] 1`] = `
"Classes may not have a field named 'constructor'. (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:2)"
`;

exports[`snippet: #2 format[espree] 1`] = `
"Classes can't have a field named 'constructor' (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^
  3 | }
Cause: Classes can't have a field named 'constructor'"
`;

exports[`snippet: #2 format[flow] 1`] = `
"Classes may not have fields named \`constructor\`. (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^
  3 | }
Cause: Classes may not have fields named \`constructor\`. (2:2)"
`;

exports[`snippet: #2 format[hermes] 1`] = `
"invalid class property name (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^
  3 | }
Cause: invalid class property name (2:2)
  'constructor'
  ^~~~~~~~~~~~~"
`;

exports[`snippet: #2 format[meriyah] 1`] = `
"Classes may not have a field called constructor (3:1)
  1 | class Foo {
  2 |   'constructor'
> 3 | }
    | ^
Cause: [3:0-3:1]: Classes may not have a field called constructor"
`;

exports[`snippet: #2 format[oxc] 1`] = `
"Classes can't have a field named 'constructor' (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #2 format[oxc-ts] 1`] = `
"Classes can't have a field named 'constructor' (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #2 format[typescript] 1`] = `
"Classes may not have a field named 'constructor'. (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^^^^^^^^^^^^^
  3 | }
Cause: Classes may not have a field named 'constructor'."
`;

exports[`snippet: #2 format[yuku] 1`] = `
"Expected '(' for getter/setter definition, but found '}' (3:1)
  1 | class Foo {
  2 |   'constructor'
> 3 | }
    | ^"
`;

exports[`snippet: #2 format[yuku-ts] 1`] = `
"Expected '(' for getter/setter definition, but found '}' (3:1)
  1 | class Foo {
  2 |   'constructor'
> 3 | }
    | ^"
`;

exports[`snippet: #3 format[acorn] 1`] = `
"Unexpected token (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^
  3 | }
Cause: Unexpected token (2:11)"
`;

exports[`snippet: #3 format[babel] 1`] = `
"Classes may not have a field named 'constructor'. (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:11)"
`;

exports[`snippet: #3 format[babel-ts] 1`] = `
"Classes may not have a field named 'constructor'. (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:11)"
`;

exports[`snippet: #3 format[espree] 1`] = `
"Unexpected token 'constructor' (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^
  3 | }
Cause: Unexpected token 'constructor'"
`;

exports[`snippet: #3 format[flow] 1`] = `
"Unexpected string, expected the token \`(\` (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^
  3 | }
Cause: Unexpected string, expected the token \`(\` (2:11)"
`;

exports[`snippet: #3 format[hermes] 1`] = `
"';' expected after class property (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^
  3 | }
Cause: ';' expected after class property (2:11)
  accessor 'constructor'
  ~~~~~~~~~^"
`;

exports[`snippet: #3 format[meriyah] 1`] = `
"Classes may not have a field called constructor (3:1)
  1 | class Foo {
  2 |   accessor 'constructor'
> 3 | }
    | ^
Cause: [3:0-3:1]: Classes may not have a field called constructor"
`;

exports[`snippet: #3 format[oxc] 1`] = `
"Classes may not have a field named 'constructor' (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #3 format[oxc-ts] 1`] = `
"Classes may not have a field named 'constructor' (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #3 format[typescript] 1`] = `
"Classes may not have a field named 'constructor'. (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^^^^^^^^^^^^^
  3 | }
Cause: Classes may not have a field named 'constructor'."
`;

exports[`snippet: #3 format[yuku] 1`] = `
"Expected '(' for getter/setter definition, but found '}' (3:1)
  1 | class Foo {
  2 |   accessor 'constructor'
> 3 | }
    | ^"
`;

exports[`snippet: #3 format[yuku-ts] 1`] = `
"Expected '(' for getter/setter definition, but found '}' (3:1)
  1 | class Foo {
  2 |   accessor 'constructor'
> 3 | }
    | ^"
`;

exports[`snippet: #4 format[acorn] 1`] = `
"Unexpected token (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^
  3 | }
Cause: Unexpected token (2:11)"
`;

exports[`snippet: #4 format[babel] 1`] = `
"Classes may not have a field named 'constructor'. (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:11)"
`;

exports[`snippet: #4 format[babel-ts] 1`] = `
"Classes may not have a field named 'constructor'. (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:11)"
`;

exports[`snippet: #4 format[espree] 1`] = `
"Unexpected token 'constructor' (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^
  3 | }
Cause: Unexpected token 'constructor'"
`;

exports[`snippet: #4 format[flow] 1`] = `
"Unexpected string, expected the token \`(\` (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^
  3 | }
Cause: Unexpected string, expected the token \`(\` (2:11)"
`;

exports[`snippet: #4 format[hermes] 1`] = `
"';' expected after class property (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^
  3 | }
Cause: ';' expected after class property (2:11)
  accessor 'constructor'
  ~~~~~~~~~^"
`;

exports[`snippet: #4 format[meriyah] 1`] = `
"Classes may not have a field called constructor (3:1)
  1 | class Foo {
  2 |   accessor 'constructor'
> 3 | }
    | ^
Cause: [3:0-3:1]: Classes may not have a field called constructor"
`;

exports[`snippet: #4 format[oxc] 1`] = `
"Classes may not have a field named 'constructor' (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #4 format[oxc-ts] 1`] = `
"Classes may not have a field named 'constructor' (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #4 format[typescript] 1`] = `
"Classes may not have a field named 'constructor'. (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^^^^^^^^^^^^^
  3 | }
Cause: Classes may not have a field named 'constructor'."
`;

exports[`snippet: #4 format[yuku] 1`] = `
"Expected '(' for getter/setter definition, but found '}' (3:1)
  1 | class Foo {
  2 |   accessor 'constructor'
> 3 | }
    | ^"
`;

exports[`snippet: #4 format[yuku-ts] 1`] = `
"Expected '(' for getter/setter definition, but found '}' (3:1)
  1 | class Foo {
  2 |   accessor 'constructor'
> 3 | }
    | ^"
`;

exports[`snippet: #5 format[acorn] 1`] = `
"Unexpected token (2:12)
  1 | class Foo {
> 2 |   accessor constructor
    |            ^
  3 | }
Cause: Unexpected token (2:11)"
`;

exports[`snippet: #5 format[babel] 1`] = `
"Classes may not have a field named 'constructor'. (2:12)
  1 | class Foo {
> 2 |   accessor constructor
    |            ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:11)"
`;

exports[`snippet: #5 format[babel-ts] 1`] = `
"Classes may not have a field named 'constructor'. (2:12)
  1 | class Foo {
> 2 |   accessor constructor
    |            ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:11)"
`;

exports[`snippet: #5 format[espree] 1`] = `
"Unexpected token constructor (2:12)
  1 | class Foo {
> 2 |   accessor constructor
    |            ^
  3 | }
Cause: Unexpected token constructor"
`;

exports[`snippet: #5 format[flow] 1`] = `
"Unexpected identifier, expected the token \`(\` (2:12)
  1 | class Foo {
> 2 |   accessor constructor
    |            ^
  3 | }
Cause: Unexpected identifier, expected the token \`(\` (2:11)"
`;

exports[`snippet: #5 format[hermes] 1`] = `
"';' expected after class property (2:12)
  1 | class Foo {
> 2 |   accessor constructor
    |            ^
  3 | }
Cause: ';' expected after class property (2:11)
  accessor constructor
  ~~~~~~~~~^"
`;

exports[`snippet: #5 format[meriyah] 1`] = `
"Classes may not have a field called constructor (3:1)
  1 | class Foo {
  2 |   accessor constructor
> 3 | }
    | ^
Cause: [3:0-3:1]: Classes may not have a field called constructor"
`;

exports[`snippet: #5 format[oxc] 1`] = `
"Expected \`(\` but found \`}\` (3:1)
  1 | class Foo {
  2 |   accessor constructor
> 3 | }
    | ^"
`;

exports[`snippet: #5 format[oxc-ts] 1`] = `
"Expected \`(\` but found \`}\` (3:1)
  1 | class Foo {
  2 |   accessor constructor
> 3 | }
    | ^"
`;

exports[`snippet: #5 format[typescript] 1`] = `
"'(' expected. (3:1)
  1 | class Foo {
  2 |   accessor constructor
> 3 | }
    | ^
Cause: '(' expected."
`;

exports[`snippet: #5 format[yuku] 1`] = `
"Expected '(' for getter/setter definition, but found '}' (3:1)
  1 | class Foo {
  2 |   accessor constructor
> 3 | }
    | ^"
`;

exports[`snippet: #5 format[yuku-ts] 1`] = `
"Expected '(' for getter/setter definition, but found '}' (3:1)
  1 | class Foo {
  2 |   accessor constructor
> 3 | }
    | ^"
`;
